<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.jeancarlo.practicadrawer.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_seccion_1"
            android:icon="@drawable/ic_menu"
            android:title="@string/seccion_1"/>
        <item
            android:id="@+id/menu_seccion_2"
            android:icon="@drawable/ic_menu"
            android:title="@string/seccion_2"/>
        <item
            android:id="@+id/menu_seccion_3"
            android:icon="@drawable/ic_menu"
            android:title="@string/seccion_3"/>
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/otras_opciones">
        <menu>
            <item
                android:id="@+id/menu_opcion_1"
                android:icon="@drawable/ic_menu"
                android:title="@string/opcion_1"/>
            <item
                android:id="@+id/menu_opcion_2"
                android:icon="@drawable/ic_menu"
                android:title="@string/opcion_2"/>
        </menu>
    </item>
</menu>
